Updated repositories to request results lazily for update/create calls
